--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="students.html"></a>
     <a href="aboutus.html"></a>
     <a href="contactus.html"></a>
+    <a href="faculty.html"></a>
+    <a href="feedback.html"></a>
 </body>
 </html>
